--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -44,6 +44,12 @@
           <li class="nav-item">
             <a class="nav-link" th:href="@{/contacts}">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/login}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/register}">Register</a>
+          </li>
         </ul>
       </div>
     </div>
