--- a/src/main/resources/templates/selectedpost.html
+++ b/src/main/resources/templates/selectedpost.html
@@ -48,6 +48,12 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/contact}">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/login}">login</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" th:href="@{/register}">Register</a>
+            </li>
             </ul>
         </div>
     </div>
