--- a/src/main/resources/templates/adduser.html
+++ b/src/main/resources/templates/adduser.html
@@ -91,6 +91,7 @@
                      class="form-control"
                      placeholder="input your email"
                      id="name">
+              <span th:errors="*{email}">email error</span>
               <br>
             </div>
           </div>
@@ -100,6 +101,7 @@
                       th:field="*{password}"
                      class="form-control"
                      placeholder="input your password">
+              <span th:errors="*{password}">password error</span>
               <br>
             </div>
           </div>
@@ -109,6 +111,7 @@
                      th:field="*{password_confirm}"
                      class="form-control"
                      placeholder="repeat your password">
+              <span th:if="${passwordMessage != null}" th:text="${passwordMessage}">password_compare</span>
               <br>
             </div>
           </div>
