--- a/src/main/resources/templates/selectedpost.html
+++ b/src/main/resources/templates/selectedpost.html
@@ -116,7 +116,7 @@
                                    class="form-control"
                                    placeholder="input your comment"
                                    id="name"
-                                   required data-validation-required-message="Please input your message">
+                                      required data-validation-required-message="Please input your message"></textarea>
                             <br>
                         </div>
                     </div>
