--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -40,7 +40,7 @@
             <a class="nav-link" th:href="@{/}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/addpost}">Sample Post</a>
+            <a class="nav-link" th:href="@{/addpost}">Add Post</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" th:href="@{/contacts}">Contact</a>
@@ -95,10 +95,10 @@
         <!-- Pager -->
         <div class="clearfix">
           <form th:if="${loggedEmail != null}" th:action="@{'/deletepost/' + ${post.getId()}}" th:method="delete">
-            <input th:if="${loggedEmail.equals(post.getPostOwner().getEmail())}" class="btn btn-primary float-right" type="submit" value="delete">
+            <input th:if="${loggedEmail.equals(post.getPostOwner().getEmail()) || isAdmin}" class="btn btn-primary float-right" type="submit" value="delete">
           </form>
           <form th:if="${loggedEmail != null}" th:action="@{'/updatepost/' + ${post.getId()}}" th:method="get">
-            <input th:if="${loggedEmail.equals(post.getPostOwner().getEmail())}" class="btn btn-primary float-right" type="submit" value="update">
+            <input th:if="${loggedEmail.equals(post.getPostOwner().getEmail()) || isAdmin}" class="btn btn-primary float-right" type="submit" value="update">
           </form>
         </div>
       </div>
