--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -46,7 +46,8 @@
             <a class="nav-link" th:href="@{/contacts}">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/login}">Login</a>
+            <a class="nav-link" th:if="${loggedEmail == null}" th:href="@{/login}">Login</a>
+            <a class="nav-link" th:if="${loggedEmail != null}" th:href="@{/logout}">Logout</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" th:href="@{/register}">Register</a>
