--- a/src/main/resources/templates/adduser.html
+++ b/src/main/resources/templates/adduser.html
@@ -113,7 +113,8 @@
                      th:field="*{password_confirm}"
                      class="form-control"
                      placeholder="repeat your password">
-              <span th:if="${passwordMessage != null}" th:text="${passwordMessage}">password_compare</span>
+              <span th:errors="*{password_confirm}">email_error</span>
+              <span th:if="${passwordMessage} != null" th:text="${passwordMessage}">password_compare</span>
               <br>
             </div>
           </div>
