update: added error messages for contact form

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -82,28 +82,28 @@
             <div class="form-group floating-label-form-group controls">
               <label>Name</label>
               <input type="text" class="form-control" placeholder="Name" id="name" th:field="*{name}">
-              <p class="help-block text-danger"></p>
+              <p class="help-block text-danger" th:errors="*{name}"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Email Address</label>
               <input type="email" class="form-control" placeholder="Email Address" id="email" th:field="*{email}">
-              <p class="help-block text-danger"></p>
+              <p class="help-block text-danger" th:errors="*{email}"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label>Phone Number</label>
               <input type="tel" class="form-control" placeholder="Phone Number" id="phone" th:field="*{phone}">
-              <p class="help-block text-danger"></p>
+              <p class="help-block text-danger" th:errors="*{phone}"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Message</label>
               <textarea rows="5" class="form-control" placeholder="Message" id="message" th:field="*{message}"></textarea>
-              <p class="help-block text-danger"></p>
+              <p class="help-block text-danger" th:errors="*{message}"></p>
             </div>
           </div>
           <br>
