--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -52,6 +52,9 @@
           <li class="nav-item">
             <a class="nav-link" th:href="@{/register}">Register</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" th:if="${isAdmin}" th:href="@{/admin}">Admin</a>
+          </li>
         </ul>
       </div>
     </div>
