--- a/src/main/resources/templates/updatepost.html
+++ b/src/main/resources/templates/updatepost.html
@@ -110,7 +110,7 @@
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
-              <select class="form-control">
+              <select class="form-control" th:field="*{categoryEnum}">
                 <option th:each="c : ${categories}"
                         th:value="${c}"
                         th:text="${c}">
