--- a/src/main/resources/templates/admin/tables.html
+++ b/src/main/resources/templates/admin/tables.html
@@ -341,7 +341,7 @@
           <!-- DataTales Example -->
           <div class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+              <h6 class="m-0 font-weight-bold text-primary">Contact Data</h6>
             </div>
             <div class="card-body">
               <div class="table-responsive">
@@ -383,6 +383,56 @@
               </div>
             </div>
           </div>
+
+<!--          XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX-->
+          <!-- DataTales Example -->
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">User Data</h6>
+            </div>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-bordered" id="userTable" width="100%" cellspacing="0">
+                  <thead>
+                  <tr>
+                    <th>e-mail</th>
+                    <th>password</th>
+                    <th>activity</th>
+                    <th>role</th>
+                    <th>(+)/(-)</th>
+                  </tr>
+                  </thead>
+                  <tfoot>
+                  <tr>
+                    <th>e-mail</th>
+                    <th>password</th>
+                    <th>activity</th>
+                    <th>role</th>
+                    <th>(+)/(-)</th>
+                  </tr>
+                  </tfoot>
+                  <tbody th:each="user : ${users}">
+                  <tr>
+                    <td th:text="${user.getEmail()}">e-mail</td>
+                    <td th:text="${user.getPassword().substring(user.getPassword().length()-8)}">password</td>
+                    <td th:text="${user.isActivityFlag()}">activity</td>
+                    <td th:if="${user.getRoles().contains(role_admin)}" th:text="admin">role</td>
+                    <td th:if="${!user.getRoles().contains(role_admin)}" th:text="user">role</td>
+                    <td>
+                      <form th:if="${user.getRoles().contains(role_admin)}" th:action="@{'/addAdmin/'+${user.getId()}}" th:method="get">
+                        <input type="submit" value="+">
+                      </form>
+                      <form th:if="${!user.getRoles().contains(role_admin)}" th:action="@{'/subAdmin/'+${user.getId()}}" th:method="get">
+                        <input type="submit" value="-">
+                      </form>
+                    </td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+
 
         </div>
         <!-- /.container-fluid -->
